<resources>
    <string name="app_name">BasicApp</string>
    <string name="sign_in_Title">Sign In</string>
    <string name="log_in_text">LOG IN</string>
    <string name="javainterface">JavaInterface</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="morgans_text">morgans_text</string>
    <string name="swiper">Swiper</string>
    <string name="click_me_bro">Click Me Bro</string>
    <string name="top_text">Top</string>
    <string name="bottom_text">Bottom</string>
    <string name="red_string">Red String</string>
    <string name="green_string">Green String</string>
    <string name="yellow_string">Yellow String</string>
    <string name="coded_layout">Coded Layout</string>
    <string name="meme_creator">Meme Creator</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="overflow_menue">Overflow Menue</string>
    <string name="back">Back</string>
    <string name="animation">Animation</string>
    <string name="click_me_baby">Click Me Baby</string>
    <string name="hello">Hello</string>
    <string name="threads">Threads</string>

</resources>
