<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.morgan.basicapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/sign_in_Title"
        android:id="@+id/lbltitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="90dp"
        android:id="@+id/txtemail"
        android:layout_below="@+id/lbltitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="320dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/txtemail"
        android:layout_alignStart="@+id/txtemail"
        android:id="@+id/txtpassword"
        android:width="320dp"/>

    <Button
        android:text="@string/javainterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/btninterface"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/log_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/btnlogin"
        android:layout_below="@+id/txtpassword"
        android:layout_toRightOf="@+id/btninterface"
        android:layout_toEndOf="@+id/btninterface" />

    <Button
        android:text="@string/swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btninterface"
        android:layout_toRightOf="@+id/btninterface"
        android:layout_toEndOf="@+id/btninterface"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/btnswiper" />

</RelativeLayout>
